assets/css/style.css
* {
    color: black;
    font-family: sans-serif;
}

.flex-container {
    display: flex;
    max-width: 100%;
}

.header {
    box-sizing: border-box;
    background-color: darkslategrey;
    margin-bottom: 10px;
    padding-left: 10%;
    text-align: center;
    padding-left: 0%;
}

.header h1,
.nav-link {
    display: flex;
    color: antiquewhite;
    justify-content: center;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}


.nav-link li {
    text-decoration: none;
    margin-right: 3%;
    padding-right: 20px;
    text-decoration: none;
    list-style-type: none;
    white-space: nowrap;
}

.nav-link a {
    color: antiquewhite;
}

#chevelle-pic {
    background-image: url("../images/chevelle.jpg");
    height: 400px;
    background-size: cover;
    background-position: center;
    margin-bottom: 10px;
}

.header,
#chevelle-pic,
.content {
    border: black;
    border-style: solid;
}

.header {
    /* position: relative; */
}

.header img {
    display: inline;
    background-size: cover;
    background-position: center;
    height: 200px;
}
.section-title {
    text-decoration: underline;
    text-decoration-color: antiquewhite;
}

.content {
    box-sizing: border-box;
    margin-bottom: 10px;
    padding: 10px;
    background-color: cadetblue;
}

.content-name {
    max-width: 15%;
    color: antiquewhite;
    text-shadow: 1px 1px black;
    margin-left: 3%;
}

.content section {
    margin: 20px;
    color: white;
}

#about-me-substance {
    justify-content: center;
}

#about-me-substance p {
    text-indent: 20px;
    margin-left: 5%;
    margin-right: 5%;
    font-size: 20px;
}

#work-substance {
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    text-align: center;
    align-items: center;
}

#work-1 {
    flex: 1 0 auto;
    /* background-size: cover; */
    /* background-position: center; */
    width: 312px;
}
#work-1 a {
    width: 312px;
}
#work-1 img {
    height: 200px;
    width: 312px;
}

#work-substance section {
    box-sizing: border-box;
    border: 1px;
    border-style: solid;
    border-color: black;
    padding: 5px;
}

#contact-me-substance {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

